<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.inkadroid.tareas5.Tarea5"
    android:background="#f3151515">

    <TextView
        android:text="@string/Tarea5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:textColor="#ffb3b3b3"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/dig"
        android:id="@+id/frameLayout3"></FrameLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Volver"
        android:id="@+id/button11"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:nestedScrollingEnabled="false"
        android:onClick="cerrar5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Elem"
        android:id="@+id/textView24"
        android:layout_below="@+id/frameLayout3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="#f3bdb3ba" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView24"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView24"
            android:layout_toEndOf="@+id/textView24"
            android:layout_marginRight="30dp">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PW"
                android:id="@+id/bPW" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/H"
                android:id="@+id/bH" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:text="@string/D"
                android:id="@+id/bD" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RS"
                android:id="@+id/bRS" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/V"
                android:id="@+id/bV" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CE"
                android:id="@+id/bCE" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMonto"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:textColor="#ffd8d8d8"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColorHint="#ffd8d8d8"
        android:hint="0" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calcular"
        android:id="@+id/bCalc"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Limpiar"
        android:id="@+id/button15"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="limpi" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Anad"
        android:id="@+id/bSumar"
        android:layout_below="@+id/textView27"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/con"
        android:id="@+id/textView27"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="#f3bdb3ba"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"/>

</RelativeLayout>
