<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/moradobajo">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentEnd="false"
        android:layout_centerInParent="true"
        android:id="@+id/linearLayout2">

        <TextView android:text="@string/Titulo1" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="#ff652c8d"
            android:id="@+id/textView"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tarea1"
            android:id="@+id/button"
            android:textSize="20dp"
            android:textStyle="bold"
            android:background="#ff67228d"
            android:layout_alignParentStart="true"
            android:onClick="lanzar"
            android:textColor="#ffffffff" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tarea2"
            android:id="@+id/button2"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/button"
            android:textSize="20dp"
            android:textStyle="bold"
            android:background="#ff67228d"
            android:layout_alignEnd="@+id/button"
            android:layout_alignStart="@+id/button"
            android:onClick="lanzar1"
            android:textColor="#ffffffff" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tarea3"
            android:id="@+id/button3"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_below="@+id/button2"
            android:layout_alignEnd="@+id/button2"
            android:background="#ff67228d"
            android:layout_alignStart="@+id/button2"
            android:onClick="lanzar2"
            android:textColor="#ffffffff" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tarea4"
            android:id="@+id/button4"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/button3"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            android:textStyle="bold"
            android:background="#ff67228d"
            android:onClick="lanzar3"
            android:textColor="#ffffffff" />

        <Button
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/Tarea5"
            android:id="@+id/button5"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_below="@+id/button4"
            android:layout_alignStart="@+id/button3"
            android:background="#ff67228d"
            android:layout_alignEnd="@+id/button4"
            android:onClick="lanzar4"
            android:textColor="#ffffffff" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fin"
            android:id="@+id/button6"
            android:textSize="15dp"
            android:textStyle="bold"
            android:background="#ed8c1cc4"
            android:onClick="cerrar"
            android:textColor="#ffffffff"
            android:layout_below="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</RelativeLayout>
