<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.inkadroid.tareas5.Tarea4"
    android:background="#f3151515">

    <TextView
        android:text="@string/Tarea4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="45dp"
        android:textColor="#ffb3b3b3"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:id="@+id/textView18" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/vacas"></FrameLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Volver"
        android:id="@+id/button10"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="cerrar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Anio"
        android:id="@+id/textView19"
        android:layout_below="@+id/textView18"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:textColor="#f3bdb3ba"
        android:textStyle="bold"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/DOtorg"
        android:id="@+id/textView20"
        android:layout_marginTop="20dp"
        android:textColor="#f3bdb3ba"
        android:textStyle="bold"
        android:layout_below="@+id/textView19"
        android:layout_alignParentStart="true"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Dtotal"
        android:id="@+id/textView21"
        android:textColor="#f3bdb3ba"
        android:textStyle="bold"
        android:textSize="12dp"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"
        android:layout_below="@+id/textView23"
        android:layout_alignStart="@+id/textView22" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/DPendi"
        android:id="@+id/textView22"
        android:textColor="#f3bdb3ba"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textSize="12dp"
        android:layout_below="@+id/textView21"
        android:layout_alignEnd="@+id/textView20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/DV"
        android:id="@+id/textView23"
        android:textColor="#f3bdb3ba"
        android:textStyle="bold"
        android:layout_below="@+id/textView20"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textSize="15dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Limpiar"
        android:id="@+id/button13"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="limpiar2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calcular"
        android:id="@+id/button14"
        android:layout_alignBottom="@+id/button13"
        android:layout_centerHorizontal="true"
        android:onClick="calc2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtTraba"
        android:layout_alignBottom="@+id/textView19"
        android:layout_alignEnd="@+id/button14"
        android:layout_toEndOf="@+id/textView19"
        android:textColor="#ffd8d8d8" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtOtorg"
        android:layout_alignBottom="@+id/textView20"
        android:layout_alignEnd="@+id/edtTraba"
        android:layout_toEndOf="@+id/textView20"
        android:textColor="#ffd8d8d8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtTotal"
        android:layout_above="@+id/textView22"
        android:layout_alignEnd="@+id/edtTraba"
        android:layout_toEndOf="@+id/textView21"
        android:textColor="#ffd8d8d8"
        android:textColorHint="#ffd8d8d8"
        android:textSize="12dp"
        android:hint="Total de Dias" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtPend"
        android:textColor="#ffd8d8d8"
        android:textColorHint="#ffd8d8d8"
        android:textSize="12dp"
        android:hint="Dias Pendientes"
        android:layout_alignBottom="@+id/textView22"
        android:layout_alignStart="@+id/edtOtorg" />

</RelativeLayout>
