<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.inkadroid.tareas5.Tarea2"
    android:background="#f3151515">

    <TextView
        android:text="@string/Tarea2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:textColor="#ffb3b3b3"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:id="@+id/textView17" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/vent"
        android:id="@+id/frameLayout2"></FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Volver"
        android:id="@+id/button8"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="cerrar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/PU"
        android:id="@+id/textView11"
        android:layout_below="@+id/frameLayout2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="#f3bdb3ba" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Cant"
        android:id="@+id/textView13"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:textColor="#f3bdb3ba" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Br"
        android:id="@+id/textView14"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView13"
        android:layout_alignParentStart="true"
        android:textColor="#f3bdb3ba" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Igv"
        android:id="@+id/textView15"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView14"
        android:layout_alignParentStart="true"
        android:textColor="#f3bdb3ba" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Neto"
        android:id="@+id/textView16"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView15"
        android:layout_alignParentStart="true"
        android:textColor="#f3bdb3ba" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtPU"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignEnd="@+id/button12"
        android:layout_toEndOf="@+id/textView11"
        android:textColor="#ffd8d8d8"
        android:textColorHint="#ffd8d8d8" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Limpiar"
        android:id="@+id/button7"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="limpiar1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calcular"
        android:id="@+id/button12"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="calc1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtCant"
        android:layout_above="@+id/textView14"
        android:layout_alignEnd="@+id/edtPU"
        android:layout_toEndOf="@+id/textView13"
        android:textColor="#ffd8d8d8"
        android:textColorHint="#ffd8d8d8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtBr"
        android:layout_above="@+id/textView15"
        android:textStyle="italic"
        android:textSize="15dp"
        android:layout_alignEnd="@+id/edtCant"
        android:layout_toEndOf="@+id/textView14"
        android:textColorHint="#ffd8d8d8"
        android:textColor="#ffd8d8d8"
        android:textIsSelectable="true"
        android:hint="Cantidad * Precio Unitario" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtIgv"
        android:textStyle="italic"
        android:textSize="15dp"
        android:textColorHint="#ffd8d8d8"
        android:textColor="#ffd8d8d8"
        android:textIsSelectable="true"
        android:hint="Bruto * igv"
        android:layout_above="@+id/textView16"
        android:layout_alignEnd="@+id/edtCant"
        android:layout_toEndOf="@+id/textView15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtNeto"
        android:textStyle="italic"
        android:textSize="15dp"
        android:textColorHint="#ffd8d8d8"
        android:textColor="#ffd8d8d8"
        android:textIsSelectable="true"
        android:hint="Bruto + igv"
        android:layout_alignTop="@+id/textView16"
        android:layout_alignEnd="@+id/txtIgv"
        android:layout_toEndOf="@+id/textView16" />

</RelativeLayout>
