<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.inkadroid.tareas5.Tarea3"
    android:background="#f3151515">

    <TextView
        android:text="@string/Tarea3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:textColor="#ffb3b3b3"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:id="@+id/textView3" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/rnt"
        android:id="@+id/frameLayout4"></FrameLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Volver"
        android:id="@+id/button9"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="cerrar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/SueldoM"
        android:id="@+id/textView25"
        android:layout_below="@+id/frameLayout4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="#f3bdb3ba" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/UITs"
        android:id="@+id/textView26"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="#f3bdb3ba"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView25"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtSM"
        android:layout_alignBottom="@+id/textView25"
        android:layout_alignEnd="@+id/button18"
        android:layout_toEndOf="@+id/textView25"
        android:textColor="#ffd8d8d8" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Limpiar"
        android:id="@+id/button17"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="limpiar6" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calcular"
        android:id="@+id/button18"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="calc6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtU"
        android:textColor="#ffd8d8d8"
        android:hint="Numero de UITs"
        android:textColorHint="#ffd8d8d8"
        android:textSize="15dp"
        android:layout_alignTop="@+id/textView26"
        android:layout_toEndOf="@+id/textView26" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtMon"
        android:textColor="#ffd8d8d8"
        android:hint="Monto"
        android:textColorHint="#ffd8d8d8"
        android:textSize="25dp"
        android:layout_below="@+id/txtU"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:textStyle="bold" />

</RelativeLayout>
